# ATOMIC-FIZZ-CAPS-VAULT-77-WASTELAND-GPS

./: .coderabbit.yaml  .env.example  .env.testnet  .gitignore  Anchor.toml  CHANGELOG_DIALOGUE.md  CHANGES_SUMMARY.txt  DEEP_SCAN_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_MANIFEST.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  MAP_FIXES_SUMMARY.md  METAPLEX_RESOLUTION.md  MODULE_WIRING_AUDIT.md  QUICK_REFERENCE.md  RADIO_FIX_SUMMARY.md  README.md  TESTING_GUIDE.md  TESTING_INSTRUCTIONS.md  TESTNET_DEPLOYMENT_GUIDE.md  UPGRADE_COMPLETE.md  WALLET_UPGRADE_SUMMARY.md  add-crafting.patch  apply-fixes.js  audit-repo.js  audit-report-crypto-wallet.md  auto-fix.yaml  create-degauss.js  docker-compose.yml  exampleFunction.js  fix-project.patch  generate-locations.js  generate_locations.js  generate_npcs.js  generate_sidequest_npcs.js  generate_world.js  index.html  integrate_world.js  merge-fallout-pois.js  (+111 more)
ATOMIC-FIZZ-CAPS-VAULT-77-WASTELAND-GPS-0949421632bab6970fd5f05c952e0f6e840eebdd/: server.js
app/: globals.css  layout.tsx  page.backup.tsx  page.tsx
backend/: .env.example  claim-survival.js  index.js  locations.js  package.json  redis.js  render.yaml  server.js  server.js.bak
data/: collectibles.json  factions.json  locations.json  mintables.json  quests.json  recipes.json
docs/: AUDIT_REPORT_CERTEK.md  AWS_KMS_SETUP.md  CRYPTO_IMPLEMENTATION_RESEARCH.md  DIALOGUE_FEATURES.md  KONAMI_CODE_AND_SECURITY.md  (+4 more)
programs/fizzcaps-onchain/: Cargo.toml
programs/fizzcaps-onchain/src/: lib.rs
programs/fizzcaps-onchain/src/components/: ClaimLootButton.tsx
(+1407 files in other folders)
